--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
-    <string name="app_name">OSMApp</string>
+    <string name="app_name">MemorialQuest</string>
+    <string name="intro_text">
+        Willkommen im Spiel MemorialQuest\n
+        Man nennt mich den Bewahrer des Wissens. Meine Aufgabe ist es, die Kultur vergangener Zeiten zu erforschen, zu dokumentieren und zu erhalten. Momentan schreibe ich die umfangreichste
+        Enzyklopädie aller Zeiten. Damit ich meine Aufgabe erfüllen kann, brauche ich deine Hilfe!\n
+        Überall in deiner Umgebung findest du kulturell wertvolle Bauwerke wie Denkmäler, historische Gebäude oder Gedenktafeln. Hierbei handelt es sich um Überbleibsel der Vergangenheit oder
+        Objekte, die an frühere Geschehnisse erinnern sollen.\n
+        Auf der Karte, die du gleich sehen wirst, habe ich die wichtigsten Stellen markiert. Tippe einfach auf ein Icon um Informationen zu dem Objekt zu erhalten. Hier musst du besonders
+        aufmerksam sein, denn später wirst du dieses Wissen brauchen um ein Quiz zu lösen.
+        Wenn du alle Objekte in deiner Umgebung besucht hast, bekommst du ein Abzeichen für das Gebiet, das du dir später im Inventar anschauen kannst. Außerdem werden dann alle gesammelten
+        Informationen an mich übertragen, damit ich sie in mein Lexikon eintragen kann.\n
+        Und jetzt, viel Spaß beim Spielen!
+
+    </string>
 </resources>
