- routing and achievements added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
         Überall in deiner Umgebung findest du kulturell wertvolle Bauwerke wie Denkmäler, historische Gebäude oder Gedenktafeln. Hierbei handelt es sich um Überbleibsel der Vergangenheit oder
         Objekte, die an frühere Geschehnisse erinnern sollen.\n
         Auf der Karte, die du gleich sehen wirst, habe ich die wichtigsten Stellen markiert. Tippe einfach auf ein Icon um Informationen zu dem Objekt zu erhalten. Hier musst du besonders
-        aufmerksam sein, denn später wirst du dieses Wissen brauchen um ein Quiz zu lösen.
-        Wenn du alle Objekte in deiner Umgebung besucht hast, bekommst du ein Abzeichen für das Gebiet, das du dir später im Inventar anschauen kannst. Außerdem werden dann alle gesammelten
-        Informationen an mich übertragen, damit ich sie in mein Lexikon eintragen kann.\n
+        aufmerksam sein, denn später wirst du dieses Wissen brauchen um ein Quiz zu lösen. Wenn du das Spiel beendest werden alle gesammelten Informationen an mich übertragen, damit ich sie
+        in mein Lexikon eintragen kann.\n
+        Nachdem du eine bestimmte Anzahl an Objekten in deiner Umgebung besucht hast, bekommst du ein Abzeichen, mit dem du weitere Minispiele freischalten kannst.\n
         Und jetzt, viel Spaß beim Spielen!
 
     </string>
