- minor bug fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,7 @@
         Objekte, die an frühere Geschehnisse erinnern sollen.\n
         Auf der Karte, die du gleich sehen wirst, habe ich die wichtigsten Stellen markiert. Tippe einfach auf ein Icon um Informationen zu dem Objekt zu erhalten. Hier musst du besonders
         aufmerksam sein, denn später wirst du dieses Wissen brauchen um ein Quiz zu lösen. Wenn du das Spiel beendest werden alle gesammelten Informationen an mich übertragen, damit ich sie
-        in mein Lexikon eintragen kann.\n
-        Alle bereits besuchten Bauwerke kannst du dir später noch einmal anschauen. Tippe dazu einfach auf das Dokument unten links.\n
+        in mein Lexikon eintragen kann. Alle bereits besuchten Bauwerke kannst du dir später noch einmal anschauen. Tippe dazu einfach auf das Dokument unten links.\n
         Und jetzt, viel Spaß beim Spielen!
     </string>
     <string name="achievement_text_heading">Herzlichen Glückwunsch!</string>
